src/Styles/Card.scss
p {
  margin: 4%
}

.card-image {
  width: 100%;
  border-radius: 0px 0px 20px 20px;
  max-height: 225px;
}

.card {
  color: black;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 50vh;
}

.card:hover {
  cursor: pointer;
  transform: scale(1.1);
  transition-duration: .5s;
}

.card-details {
  margin: 2% 3% 2% 3%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 50%;

}

.title {
  font-size: 1.5vw;
  text-decoration: none;
}

.card-date-category {
  font-size: 1.2vw;
}

